--- a/config.conf
+++ b/config.conf
@@ -1,2 +1,4 @@
-url = "http://news.ycombinator.com/"
+url = "http://arenda-piter.ru/workpage.php?page=online&os=4&ob=16&rg0=0&rg2=0&rg3=0"
+from = 20000 
+to = 25000 
 patterns = ["google", "stealth", "haskell", "microsoft", "apple"]
