--- a/stack.yaml
+++ b/stack.yaml
@@ -43,6 +43,10 @@ extra-deps:
 - servant-0.12.1
 - servant-client-0.12.0.1
 - servant-client-core-0.12
+# - encoding-0.8.2
+# - Cabal-1.24.2.0
+# - regex-compat-0.93.1
+# - process-1.4.3.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
